assets/scss/_cafes.scss
@import "variables";
@import "node_modules/include-media/dist/include-media";


body#cafes-page
{
  transition: 1s all;
background: #FEFEFE;
  header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 4% 5%;
    @include media(">=phone"){  //phone defaults above
      @include media("landscape"){ //phone landscape

        }
    }
    @include media(">=tablet"){    //tablet portrait

      @include media("landscape") {  //tablet landscape

      }
    }
    @include media(">=desktop") {  //desktop

    }
    .circlelogo-wrapper{
      width: 18vw;
      height: 18vw;
      border-radius: 50%;
      border: 2px solid #3b2a14;
      @include media(">=phone"){  //phone defaults above
        @include media("landscape"){ //phone landscape

          }
      }
      @include media(">=tablet"){    //tablet portrait

        @include media("landscape") {  //tablet landscape

        }
      }
      @include media(">=desktop") {  //desktop
        width: 9.25vw;
        height: 9.25vw;
      }
      img.circle-logo{
        width: 100%;
        height: 100%;
        @include media(">=phone"){  //phone defaults above
          @include media("landscape"){ //phone landscape

            }
        }
        @include media(">=tablet"){    //tablet portrait

          @include media("landscape") {  //tablet landscape

          }
        }
        @include media(">=desktop") {  //desktop

        }
      }
    }
    nav{
      width: 70vw;
      @include media(">=phone"){  //phone defaults above
        @include media("landscape"){ //phone landscape

          }
      }
      @include media(">=tablet"){    //tablet portrait

        @include media("landscape") {  //tablet landscape

        }
      }
      @include media(">=desktop") {  //desktop

      }
      ul#main-nav{
          display:flex;
          flex-flow:row;
          flex-wrap: nowrap;
          justify-content: space-around;
          align-items: center;
          font-weight: 600;
        @include media(">=phone"){  //phone defaults above
          @include media("landscape"){ //phone landscape

            }
        }
        @include media(">=tablet"){    //tablet portrait

          @include media("landscape") {  //tablet landscape

          }
        }
        @include media(">=desktop") {  //desktop

        }
        li.nav-item{
            font-size: 3vw;
            text-transform: uppercase;
            letter-spacing: 1px;
            font-family: "ArbescoDT-Bold", Arial, sans-serif;
            color: $darkbrown;
            transition: .2s all ease-in-out;
            cursor: pointer;
          &:hover{
            color: $orange;
          }
          &:last-child{
            display: none;
          }
          @include media(">=phone"){  //phone defaults above
            @include media("landscape"){ //phone landscape

              }
          }
          @include media(">=tablet"){    //tablet portrait

            @include media("landscape") {  //tablet landscape

            }
          }
          @include media(">=desktop") {  //desktop

          }
        }
      }
    }
  } //end <HEADER>
  #hero{
    background: url('../img/tm_mobile_hero/1000.jpg');
    background-size: cover;
    height: 35vh;
    position: relative;
    @include media(">=phone"){  //phone defaults above
        @include media("landscape"){ //phone landscape

        }
    }
    @include media(">=tablet"){    //tablet portrait

        @include media("landscape") {  //tablet landscape

        }
    }
    @include media(">=desktop") {  //desktop

    }
    .overlay{
      padding: 17vw 0vw 5vw 0vw;
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      display: -ms-flexbox;
      display: flex;
      -ms-flex-flow: column;
      flex-flow: column;
      justify-content: space-around;
      align-items: center;;
      background: rgba(0,0,0,0.5);
      @include media(">=phone"){  //phone defaults above
          @include media("landscape"){ //phone landscape

          }
      }
      @include media(">=tablet"){    //tablet portrait

          @include media("landscape") {  //tablet landscape

          }
      }
      @include media(">=desktop") {  //desktop

      }
      h3{
        color: $lightYellow;
        font-size: 9vw;
        font-family: 'ArbescoDT-Bold', serif;
        text-transform: uppercase;
        letter-spacing: 1px;
        text-shadow: 0px 0px 1px black;
        @include media(">=phone"){  //phone defaults above
            @include media("landscape"){ //phone landscape

            }
        }
        @include media(">=tablet"){    //tablet portrait

            @include media("landscape") {  //tablet landscape

            }
        }
        @include media(">=desktop") {  //desktop

        }
      }
      #nearest-cafe{
        border: 3px solid #f2c572;
        padding: 2vw 5vw;
        font-family: 'ArbescoDT-SemiBold', serif;
        color: #f2c572;
        cursor: pointer;
        text-transform: uppercase;
        font-size: 4vw;
        background: rgba(0,0,0,0.3);

        @include media(">=phone"){  //phone defaults above
            @include media("landscape"){ //phone landscape

            }
        }
        @include media(">=tablet"){    //tablet portrait

            @include media("landscape") {  //tablet landscape

            }
        }
        @include media(">=desktop") {  //desktop

        }
      }
    }
  }
  blockquote{
    padding: 0 30px;
    font-family: 'ArbescoDT-Bold';
    font-size: 1.6rem;
    text-align: center;
    padding: 50px 30px;
    line-height: 1.75;
    text-transform: capitalize;
    color: $darkbrown;
    position: relative;
    transform-style: preserve-3d;

  &:after{
    display: block;
    content: '';
    position: absolute;
    background: url(../img/talavera.svg);
    height: 70%;
    width: 100%;
    top: 15%;
    left: -1%;
    transform: translateZ(-1px);
    opacity: 0.06;

  }
  }
  #location-nav{
      margin-top: 15px;
      display: grid;
      grid-template-rows: auto auto;
      font-family: 'ArbescoDT-Book', serif;

      @include media(">=phone"){  //phone defaults above
          @include media("landscape"){ //phone landscape

          }
      }
      @include media(">=tablet"){    //tablet portrait

          @include media("landscape") {  //tablet landscape

          }
      }
      @include media(">=desktop") {  //desktop

      }
      div#counties{
          padding: 1.75vw 10vw;
          ul#counties-nav{
            line-height: 1;
            display: flex;
            flex-flow: row;
            justify-content: space-around;
            align-items: center;
            margin-bottom: 15px;
              li.county-item{
                  font-family: 'ArbescoDT-Bold', cursive;
                  font-size: 4.25vw;
                  cursor: pointer;
                  text-transform: uppercase;
                  color: $darkerbrown;
                  border-bottom: 1px solid white;
                  padding-bottom: 3px;
                  &:hover{

                  }
                  span{
                    font-weight: 400;
                  }
              }
          }
      }
      div#cities{
          position: relative;
          padding: 0 30px;
          margin-bottom: 15px;
          ul.cities-list{
            text-align: center;
            transition: .2s all ease-in-out;
            transform-origin: top;
              &:nth-of-type(1){

              }
              &:nth-of-type(2){

              }
              &:nth-of-type(3){

              }
              li.city{
                font-weight: 600;
                font-size: 3.5vw;
                color: $darkbrown;
                display: inline-block;
                padding: 0px 8px;
                line-height: 3;
              }
          }

      }
  } //end of div#location-nav
  section#locations-container{
    div.cafe-wrapper{
      display: grid;
      grid-template-rows: auto auto;

      div.photo-wrapper{
        width: 100vw;
        height: 65vw;
        position: relative;
        .overlay{
          position: absolute;
          top: 0;
          bottom: 0;
          right: 0;
          left: 0;
          // background: rgba(0,0,0,0.6);
          display: flex;
          flex-flow: column;
          justify-content: center;
          align-items: center;
          h3{
            color: $lightYellow;
            font-size: 6.25vw;
            font-family: 'ArbescoDT-SemiBold', serif;
            text-transform: uppercase;
            width: 100%;
            height: 43px;
            line-height: 40px;
            background: rgba(87,73,66,0.85);
            border-top: 3px solid $lightYellow;
            border-bottom: 3px solid $lightYellow;
            text-align: center;

          }
        }
        img{
          object-fit: cover;
          width: 100%;
          height: 100%;
        }
      }
      div.cafe-details{
        font-family: 'ArbescoDT-Book', serif;
        color: $darkbrown;
        width: 100vw;
        height: 50vw;
        background: #fbf9f8;
        display: grid;
        grid-template-rows: 1fr 1fr;
        grid-template-columns: 1fr 1fr;
        padding: 5vw 5vw;
        padding-left: 10vw;
        position: relative;
        justify-content: center;
        align-items: center;
        div.address{
          justify-self: start;
          grid-column: 1/2;
          grid-row: 1/2;
        }
        div.hours{
          grid-column: 2/3;
          grid-row: 1/2;
          span{
            font-weight: 600;
            text-transform: uppercase;
          }
        }
        button{
          grid-column: 1/2;
          grid-row: 2/3;
          // position: absolute;
          justify-self: start;
          align-self: start;
          @include button-style;
          text-transform: uppercase;
          letter-spacing: 1px;
          cursor: pointer;
          color: rgba(42,24,14,0.768627);
          outline: none;
          line-height: 30px;
          height: 30px;
          font-family: 'ArbescoDT-SemiBold', sans-serif;
          border: 2px solid rgba(42,24,14,0.768627);
          font-size: 0.8rem;
          box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
          padding: 0 10px;
          display: block;
          ;

        }
        div.contact{
          grid-column: 2/3;
          grid-row: 2/3;
          align-self: start;
          span{
            font-weight: 600;
          }

        }
      }
    }
  }
}//end body#cafe-page

.county-active {
  color: $otherOrange !important;
  border-color: $darkbrown !important;
}

.out-of-the-way{
  transform: scale(0);
}

#top-btn {
  @include button-style;
  border-radius: 50%;
  position: fixed;
  bottom: 5vw;
  right: 5vw;
  border: none;
  z-index: 9999;
  width: 15vw;
  height: 15vw;
  color: $darkbrown;
  border: 2px solid $darkbrown;
  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
  cursor: pointer;
  display: none;
}

